src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Estimated_Usage_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the TOTAL usage value as opposed to the annual figure</inlineHelpText>
        <label>Usage Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Construction_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess Construction Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Install Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_CongaAddressDetails__c</fullName>
        <formula>LG_Address__r.LG_FullAddressDetails__c</formula>
        <label>Conga Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaBold__c</fullName>
        <formula>LG_OLIType__c = &apos;Main&apos; ||  LG_MainOLI__c</formula>
        <label>Conga Bold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_CongaExtraDetails__c</fullName>
        <formula>if( LG_ProductDetail__c  != null ,  LG_ProductDetail__c,if(  ((!LG_MainOLI__c &amp;&amp; Ispickval(LG_Type__c , &quot;Recurring&quot;)) = true &amp;&amp; Quantity &gt; 1) ,  &apos;X &apos; + Text(Quantity) ,&apos;&apos;))</formula>
        <label>Conga Extra Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaInternetSpeed__c</fullName>
        <formula>SUBSTITUTE(LEFT( LG_ProductDetail__c ,
 (FIND(&quot;-&quot;, LG_ProductDetail__c))),
&quot;-&quot;,&quot;&quot;)</formula>
        <label>Conga Internet Speed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContractTerm__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DiscountCode__c</fullName>
        <label>Discount Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DiscountId__c</fullName>
        <label>Discount Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DiscountMessage__c</fullName>
        <label>Discount Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DiscountMonths__c</fullName>
        <label>Discount Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_IsQuantumProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsQuantumProduct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_MainOLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main OLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OLIType__c</fullName>
        <label>OLI Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OneOffPrice__c</fullName>
        <label>One-Off Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_ProductDetail__c</fullName>
        <label>Product Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Segment__c</fullName>
        <label>Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>One Off</fullName>
                </value>
                <value>
                    <fullName>Promotional Discount</fullName>
                </value>
                <value>
                    <fullName>Promotional Action</fullName>
                </value>
                <value>
                    <fullName>Closing Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the TOTAL rental value as opposed to an annual figure.  e.g. Ã‚Â£1000 per year rental would be Ã‚Â£3000 if this was a 36 months contract.</inlineHelpText>
        <label>Total Rental Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>To store the sequence in which the products are to be displayed in the quote.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>